--- a/recipes/chocolate.html
+++ b/recipes/chocolate.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Chocolate Recipe</h1>
+    <!--> <img src="../images/chocolate.jpg" alt="Chocolate Dessert" width="300"> <-->
     <h2>Ingredients</h2>
     <ul>
         <li>200g dark chocolate</li>
@@ -24,5 +25,6 @@
         <li>Pour the mixture into a baking tin and bake for 25 minutes.</li>
     </ol>
     <p>Thank You</p>
+    <a href="../index.html">Back to Recipes</a>
 </body>
 </html>
