changing readme for now

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Recipes</h1>
     <h2>Chocolate Recipe <a href="recipes/chocolate.html">Click Here</a> </h2>
+    <p> heleo</p>
 </body>
 </html>
